--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,32 @@
 <head th:fragment="header(title)" xmlns:th="http://www.springframework.org/schema/data/jaxb">
     <meta charset="UTF-8" />
     <title th:text="${title}"></title>
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-    <!-- 引入样式 -->
+    <link rel="stylesheet" th:href="@{/css/no-more-tables.css}" />
+    <!-- 引入样式
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!-- import CSS
+    <link rel="stylesheet" href="https://unpkg.com/mint-ui/lib/style.css">
+    -->
+    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap@next/dist/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
 
+
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="/js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+    <!-- 引入组件库
+    <script src="https://unpkg.com/mint-ui/lib/index.js"></script>
+           -->
+
+    <script src="https://unpkg.com/jquery@3.2.1/dist/jquery.min.js"></script>
+
+    <!-- Date-picker itself -->
+    <script src="https://unpkg.com/eonasdan-bootstrap-datetimepicker@4.17.47/build/js/bootstrap-datetimepicker.min.js"></script>
+    <link href="https://unpkg.com/eonasdan-bootstrap-datetimepicker@4.17.47/build/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+
+    <!-- Lastly add this package -->
+    <script src="https://unpkg.com/vue-bootstrap-datetimepicker"></script>
 
 </head>
 
