--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -7,22 +7,57 @@
 
 <a href="/" class="btn btn-primary btn-lg btn-block" role="button">返回</a>
 
-<form action="/html/tags/html_form_tag_action.cfm">
+<form action="/api/records" method="POST">
     <div class="form-group">
-        <label for="date">日期</label>
-        <input type="text" class="form-control" id="date" name="date">
+        <label for="date1">日期</label>
+        <input type="text" class="form-control" id="date1" name="date">
     </div>
     <div class="form-group">
-        <label for="type">类型</label>
-        <input type="text" class="form-control" id="type" name="type">
+        <label for="type1">类型</label>
+        <input type="text" class="form-control" id="type1" name="type">
     </div>
     <div class="form-group">
-        <label for="amount">数值</label>
-        <input type="text" class="form-control" id="amount" name="type">
+        <label for="amount1">数值</label>
+        <input type="text" class="form-control" id="amount1" name="amount">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
+
+
+<div id="root">
+    <div class="container">
+        <div class="row">
+            <div class="twelve columns">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
+
 <div th:replace="fragments/footer :: foot"></div>
 
+
+<script>
+    var app = new Vue({
+        el: '#root',
+        data : {date: null, type: '', amount: 0},
+
+        methods: {
+
+            saveRecord(){
+                axios({
+                    method:'post',
+                    url:'/api/records',
+                    data:{date:this.date, type:this.type, amount:this.amount}
+                }).then(function(response){
+                    alert("done");
+                }.bind(this));
+            },
+
+        }
+    });
+</script>
 </html>
